@@ -31,7 +31,8 @@
 	
 	BOOL current;
 	
-	int idx;
+	int idx; //Can't use index due to some weird bug...might be fixed...should test in the future...think it was a conflict with flac, which is now an external lib
+	int shuffleIdx;
 }
 
 -(void)setIndex:(int)i;
